# minired

./: Iniciar_RedMonitor.bat  Instalar_RedMonitor_Desktop.bat  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BandwidthMonitor.tsx  ConfigurationPanel.tsx  Cosmic3DSubnetUniverse.tsx  DeviceTable.tsx  EventLogger.tsx  HistorialHosts.tsx  MapSubred.tsx  NetworkAICopilot.tsx  NetworkAudit.tsx  NetworkAuthGate.tsx  NetworkCMDConsole.tsx  NetworkEnterpriseTools.tsx  NetworkWiki.tsx  OfflineLocationsManager.tsx  SensorTable.tsx  SpeedTest.tsx  SystemUpdatesPanel.tsx  TauriInstallerGuide.tsx  TestingCenter.tsx  UserManagement.tsx
src/utils/: macUtils.ts  simulation.test.ts  simulation.ts  subnetMath.ts
