[package]
name = "redmonitor"
version = "1.0.0"
description = "RedMonitor - Auditoria de Red Profesional"
authors = ["RedMonitor Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
